@@ -4,11 +4,12 @@
 14/01/2005: Corrected a bug occurring while forcing the computation of the map of a tree.
 04/02/2005: Corrected a bug occurring while drawing a not connected bipartite graph by contact of segments.
 04/02/2005: Dual graphs  and angle graphs are only computed for connected planar graphs.
-10/02/2005: Improved ClientServer programs
+10/02/2005: Improved ClientServer programs.
 11/02/2005: Added an algoritm to make a graph connected by adding vertices:
 		int TopologicalGraph::MakeConnectedVertex().
 11/02/2005: Added an algoritm to make a graph biconnected by adding vertices:
 		int TopologicalGraph::NpBiconnectVertex()
 11/02/2005: So now, triangulate by adding vertices and quandrangulate a graph by adding vertices work properly.	
 18/02/2005: The vision algorithm does not anymore compute a biporlar orientation if the graph is already biporlarly oriented.
-18/02/2005: There were some bugs in the editor when reversing the orientation of an edge..
+18/02/2005: There were some bugs in the editor when reversing the orientation of an edge.
+20/02/2005: There is now an arrow on oriented edges.
